--- a/site/tut1.html
+++ b/site/tut1.html
@@ -26,7 +26,7 @@
             line-height: 1.2em;
             font-style: italic;
             width: 200px;
-            text-align: start;
+            text-align: center;
             opacity: .4;
         }
 
