--- a/site/tut1.html
+++ b/site/tut1.html
@@ -30,7 +30,7 @@
             opacity: .4;
         }
 
-        /* class selector */
+        /* item having certain class selector  */
         p.bgBlue {
             color: blue;
             background-color: yellow;
@@ -45,12 +45,12 @@
             background-color: black;
 
         }
-
+        /*article which is direct child of section */
         section>article {
             color: green;
             font-size: 24px;
         }
-
+        /*list element which is descendant child of section */
         section li {
             color: green;
         }
