--- a/site/module2-solution/index.html
+++ b/site/module2-solution/index.html
@@ -11,9 +11,27 @@
     <h1>Our Menu</h1>
 
 <div class="row">
-  <div class="col-lg-4 col-md-6"><div class="para"><h3 id="chicken">Chicken</h3><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit et non quia corporis dolorum? Hic doloribus reiciendis culpa iste! Minus sunt numquam ad neque ea distinctio commodi ducimus ipsam praesentium..</p> </div></div>
-  <div class="col-lg-4 col-md-6"><div class="para"><h3 id="beef">Beef</h3><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora aliquid dolore illo placeat soluta voluptate porro nesciunt ex! Tempora distinctio quasi porro, quisquam voluptates quibusdam repellendus!</p></div></div>
-  <div class="col-lg-4 col-md-1"><div id="paraFull" class="para"><h3 id="sushi">Sushi</h3><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum odio et, at iusto autem ipsa possimus mollitia, eum ea quae ullam alias! Deleniti a aperiam culpa, eveniet ducimus laboriosam veritatis?</p></div></div>
+  <div class="col-lg-4 col-md-6">
+    <div class="para">
+      <h3 id="chicken">Chicken</h3>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit et non quia corporis dolorum? Hic doloribus
+        reiciendis culpa iste! Minus sunt numquam ad neque ea distinctio commodi ducimus ipsam praesentium..</p>
+    </div>
+  </div>
+  <div class="col-lg-4 col-md-6">
+    <div class="para">
+      <h3 id="beef">Beef</h3>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora aliquid dolore illo placeat soluta voluptate
+        porro nesciunt ex! Tempora distinctio quasi porro, quisquam voluptates quibusdam repellendus!</p>
+    </div>
+  </div>
+  <div class="col-lg-4 col-md-1">
+    <div id="paraFull" class="para">
+      <h3 id="sushi">Sushi</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum odio et, at iusto autem ipsa possimus
+        mollitia, eum ea quae ullam alias! Deleniti a aperiam culpa, eveniet ducimus laboriosam veritatis?</p>
+    </div>
+  </div>
 </div>
     
 </body>
