--- a/site/module3-solution/index.html
+++ b/site/module3-solution/index.html
@@ -37,7 +37,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link d-block d-sm-none" href="#beef"><img
-                                    src="https://cdn-icons.flaticon.com/png/512/676/premium/676848.png?token=exp=1645990483~hmac=2ccf96696f9fb911428bacbfa9ec1c8b" width="30"
+                                    src="https://cdn-icons-png.flaticon.com/512/2753/2753782.png" width="30"
                                     height="30"><br class="d-none d-lg-block d-md-block"> Beef</a>
                         </li>
                         <li class="nav-item">
@@ -79,7 +79,7 @@
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <section id="beef" class="para">
                     <h3 class="text-center"><img
-                        src="https://cdn-icons.flaticon.com/png/512/676/premium/676848.png?token=exp=1645990483~hmac=2ccf96696f9fb911428bacbfa9ec1c8b" width="30"
+                        src="https://cdn-icons-png.flaticon.com/512/2753/2753782.png" width="30"
                         height="30"><br>Beef</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam nam, iusto voluptates error
                         nobis vel ipsam mollitia suscipit tempora vero aspernatur eveniet explicabo, tenetur doloribus
