--- a/site/module3-solution/index.html
+++ b/site/module3-solution/index.html
@@ -16,14 +16,14 @@
     <header>
         <nav id="header-nav" class="navbar navbar-expand-lg navbar-light ">
             <div class="container-fluid">
-                <div class="navbar-brand float-start" style="padding-top:0px;">
+                <div id="brandname" class="navbar-brand float-start">
                     <div class="float-start">
                         <a href="index.html" style="text-decoration: none;">
                             <h1 id="backTop">Food, LLC</h1>
                         </a>
                     </div>
                 </div>
-                <button class="navbar-toggler d-block d-sm-none" type="button" data-bs-toggle="collapse"
+                <button id="navButton" class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -50,7 +50,7 @@
             </div>
         </nav>
     </header>
-    <h1 class="text-center" style="color: #90ADC6;">Our Menu</h1>
+    <h1 id="heading" class="text-center">Our Menu</h1>
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-4 col-sm-6 col-xs-12">
