--- a/site/menuBar.html
+++ b/site/menuBar.html
@@ -15,7 +15,6 @@
         href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet">
 </head>
-
 <body>
     <header>
         <nav id="header-nav" class="navbar navbar-expand-lg navbar-light ">
@@ -36,7 +35,7 @@
                   </button>
                   <div class="collapse navbar-collapse justify-content-end " id="navbarSupportedContent">
                     <ul id="nav-list" class="nav navbar-nav ">
-                        <li class="nav-item">
+                        <li class="nav-item active">
                           <a  class="nav-link active" aria-current="page" href="menuBar.html"><img src="https://cdn-icons.flaticon.com/png/512/562/premium/562678.png?token=exp=1645974188~hmac=1fc26d8005b1d59299ac7b919501b052" width="30" height="30"><br class="d-none d-lg-block d-md-block"> Menu</a>
                         </li>
                         <li class="nav-item">
@@ -61,24 +60,86 @@
     <div id="deliver" class="d-block d-sm-block d-md-block d-lg-none">
         *We Deliver
     </div>
-    
     <div class="container-fluid">
-        <img id="mainImage" src="https://www.davidchuschinabistro.com/images/jumbotron_1200.jpg" class="img-fluid rounded mx-auto d-block" alt="...">
-        <div class="row mx-auto" id="home-tile" >
-            <div class="col-lg-4 col-md-6 col-sm-12">
-                <a href="menuBar.html" ><div id="menu-tile"><span>menu</span></div></a>
+        <h2 id="menu-categories-title" class="text-center">Menu Cateories</h2>
+        <div class="text-center">
+            Substituting white rice with brown rice or fried rice after 3:00pm will be $1.50 for a pint and $2.50 for a quart.
+          </div>
+      
+          <section class="row">
+            <div class="col-md-3 col-sm-4 col-xxs-12">
+              <a href="single-category.html">
+                <div class="category-tile">
+                  <img width="200" height="200" src="" alt="Lunch">
+                  <span>Lunch</span>
+                </div>
+              </a>
             </div>
-            <div class="col-lg-4 col-md-6 col-sm-12">
-                <a href="single.html"><div id="specials-tile"><span>specials</span></div></a>
+            <div class="col-md-3 col-sm-4 col-xxs-12">
+              <a href="single-category.html">
+                <div class="category-tile">
+                  <img width="200" height="200" src="" alt="Lunch">
+                  <span>Lunch</span>
+                </div>
+              </a>
             </div>
-            <div class="col-lg-4 col-md-12 col-sm-12">
-                <a href="https://www.google.com/maps/place/David+Chu's+China+Bistro/@39.3635874,-76.7138622,17z/data=!4m6!1m3!3m2!1s0x89c81a14e7817803:0xab20a0e99daa17ea!2sDavid+Chu's+China+Bistro!3m1!1s0x89c81a14e7817803:0xab20a0e99daa17ea" target="_blank">
-                    <div id="map-tile">
-                      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3084.675372390488!2d-76.71386218529199!3d39.3635874269356!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c81a14e7817803%3A0xab20a0e99daa17ea!2sDavid+Chu&#39;s+China+Bistro!5e0!3m2!1sen!2sus!4v1452824864156" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
-                      <span>map</span>
-            </div> </a>
-        </div>
-    </div>
+            <div class="col-md-3 col-sm-4 col-xxs-12">
+              <a href="single-category.html">
+                <div class="category-tile">
+                  <img width="200" height="200" src="" alt="Lunch">
+                  <span>Lunch</span>
+                </div>
+              </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xxs-12">
+              <a href="single-category.html">
+                <div class="category-tile">
+                  <img width="200" height="200" src="" alt="Lunch">
+                  <span>Lunch</span>
+                </div>
+              </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xxs-12">
+              <a href="single-category.html">
+                <div class="category-tile">
+                  <img width="200" height="200" src="" alt="Lunch">
+                  <span>Lunch</span>
+                </div>
+              </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xxs-12">
+              <a href="single-category.html">
+                <div class="category-tile">
+                  <img width="200" height="200" src="" alt="Lunch">
+                  <span>Lunch</span>
+                </div>
+              </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xxs-12">
+              <a href="single-category.html">
+                <div class="category-tile">
+                  <img width="200" height="200" src="" alt="Lunch">
+                  <span>Lunch</span>
+                </div>
+              </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xxs-12">
+              <a href="single-category.html">
+                <div class="category-tile">
+                  <img width="200" height="200" src="" alt="Lunch">
+                  <span>Lunch</span>
+                </div>
+              </a>
+            </div>
+            <div class="col-md-3 col-sm-4 col-xxs-12">
+              <a href="single-category.html">
+                <div class="category-tile">
+                  <img width="200" height="200" src="" alt="Lunch">
+                  <span>Lunch</span>
+                </div>
+              </a>
+            </div>
+          </section>
     </div>
     <footer class="footer pan-footer">
         <div class="container-fluid">
