--- a/site/tut4.html
+++ b/site/tut4.html
@@ -1,59 +1,102 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="utf-8">
-<title>Positioning Elements</title>
-<style>
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-h1 {
-  margin-bottom: 15px;
-}
-
-div#container {
-  background-color: #00FFFF;
-  position: relative;
-  top: 60px;
-}
-p {
-  width: 50px;
-  height: 50px;
-  border: 1px solid black;
-  margin-bottom: 15px;
-}
-#p1 {
-  background-color: #A52A2A;
-  position: relative;
-  top: 65px;
-  left: 65px;
-}
-#p2 {
-  background-color: #DEB887;
-}
-#p3 {
-  background-color: #5F9EA0;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-#p4 {
-  background-color: #FF7F50;
-}
-
-</style>
+  <meta charset="utf-8">
+  <title>Positioning Elements</title>
+  <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+    .container:hover{
+      background-color: rgb(188, 245, 245);
+    }
+    .btn{
+      background-color: rgb(255, 190, 190);
+       border: 1px solid black;
+      cursor: pointer;
+    }
+    a{
+      text-decoration: none;
+      color: black;
+    }
+    .btn:visited{
+      background-color: rgb(129, 255, 112);
+    }
+    .btn:hover{
+      background-color: bisque;
+      font-weight: bold;
+    }
+    .btn:active{
+      background-color: blue;
+    }
+    .container {
+      border: 2px solid black;
+      width: 500px;
+      margin: 30px auto;
+    }
+    .navbar{
+      background-color: black;
+      border-radius: 30px;
+    }
+    .navbar ul{
+      overflow: auto;
+      font-family: Arial, Helvetica, sans-serif;
+    }
+    .navbar li {
+      list-style: none;
+      margin: 3px 10px;
+      padding: 3px 15px;
+      float: left;
+    }
+    .navbar li a{
+      text-decoration: none;
+      color: white; 
+    }
+    .navbar li a:hover{
+      color: red;
+    }
+    .searchButton{
+      float: right;
+      margin: 3px 15px;
+    }
+    input{
+      border: 1px solid black; 
+      border-radius: 10px;
+      padding: 3px;
+    }
+  </style>
 </head>
-<body>
-<h1>Positioning Elements</h1>
 
-<div id="container">
-  <p id="p1"></p>
-  <p id="p2"></p>
-  <p id="p3"></p>
-  <p id="p4"></p>
-</div>
+<body>
+  <nav class="navbar">
+    
+    <ul>
+      <li><a href="">Home</a></li>
+      <li><a href="">Store</a></li>
+      <li><a href="">About</a></li>
+      <li><a href="">Contact Us</a></li>
+      <div class="searchButton">
+        <input type="text" name="search" id="search" placeholder="Search">
+      </div>
+    </ul>
+  </nav>
+  <div class="container">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A minima at sapiente est ullam suscipit accusamus vitae
+      ipsam, dicta quidem, voluptatem non necessitatibus saepe quia quaerat natus officiis distinctio vel aut. Porro
+      perferendis tempora hic natus labore, exercitationem saepe consequuntur odio incidunt doloremque delectus
+      recusandae architecto numquam iure nulla et quos atque voluptatibus nihil a. Sit perferendis quo nihil similique,
+      pariatur soluta consequuntur quasi, neque cum quis ipsum omnis alias harum veritatis illo. Minima harum dolorum
+      hic magnam pariatur nulla, labore molestias sed aliquam aut modi accusantium maiores earum. Dicta voluptas in
+      placeat aperiam autem a suscipit, blanditiis ipsum, odio accusantium veritatis sapiente quis unde. Id temporibus
+      neque, quas consequuntur sapiente rem recusandae expedita laboriosam animi vero dolore. Molestiae tempore omnis
+      numquam quae a ipsa quisquam!</p><br>
+    <a href="tut4.html" class="btn">Read more</a>
+    <button class="btn">Click me</button>
+  </div>
 
 </body>
+
 </html>
